--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,10 +58,20 @@
         <item name="android:layout_height">45dp</item>
         <item name="android:layout_marginLeft">25dp</item>
         <item name="android:layout_marginRight">25dp</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">18dp</item>
         <item name="android:textColor">@color/btn_textcolor</item>
         <item name="android:background">@drawable/test_button_selector</item>
     </style>
+    <style name="SmsButton_small" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">38dp</item>
+        <item name="android:layout_marginLeft">25dp</item>
+        <item name="android:layout_marginRight">25dp</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:textColor">@color/btn_textcolor</item>
+        <item name="android:background">@drawable/test_button_selector</item>
+    </style>
+
     <style name="popp_anim" parent="android:Animation">
         <item name="android:windowEnterAnimation">@anim/anim_popup_in</item>
         <item name="android:windowExitAnimation">@anim/anim_popup_out</item>
