--- a/app/src/main/res/layout/activity_cl.xml
+++ b/app/src/main/res/layout/activity_cl.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v4.widget.NestedScrollView
+        android:background="@color/colorBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -10,7 +11,7 @@
             android:id="@+id/lly_body"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#F2F4F8"
+            android:background="@color/colorBackground"
             android:orientation="vertical">
 
 
@@ -77,7 +78,7 @@
                     android:id="@+id/tv_picture"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="上传图片（选填，最多上传5张）"
+                    android:text="上传图片（最多上传4张）"
                     android:textColor="#333333" />
 
                 <GridView
@@ -102,8 +103,12 @@
                 android:layout_marginTop="63px"
                 android:layout_marginRight="24dp"
                 android:layout_marginBottom="50px"
-
                 android:text="确定" />
+            <View
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"/>
+
 
         </com.zhy.autolayout.AutoLinearLayout>
     </android.support.v4.widget.NestedScrollView>
