--- a/app/src/main/res/layout/activity_linked_service.xml
+++ b/app/src/main/res/layout/activity_linked_service.xml
@@ -9,6 +9,7 @@
         <com.zhy.autolayout.AutoLinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center_horizontal"
             android:background="@color/colorBackground"
             android:orientation="vertical">
             
@@ -44,16 +45,16 @@
             </com.zhy.autolayout.AutoFrameLayout>
 
             <com.zhy.autolayout.AutoLinearLayout
-                android:layout_width="wrap_content"
+
+                android:layout_width="420px"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="61px"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="32px"
-                    android:layout_height="32px"
+                    android:layout_width="50px"
+                    android:layout_height="50px"
                     android:src="@drawable/linked_4" />
 
                 <TextView
@@ -62,9 +63,10 @@
                     android:layout_marginLeft="6px"
                     android:text="联系电话"
                     android:textColor="@color/color333333"
-                    android:textSize="30px" />
+                    android:textSize="36px" />
 
                 <TextView
+                    android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8px"
@@ -75,16 +77,16 @@
 
             </com.zhy.autolayout.AutoLinearLayout>
             <com.zhy.autolayout.AutoLinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="420px"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="26px"
+
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="32px"
-                    android:layout_height="32px"
+                    android:layout_width="50px"
+                    android:layout_height="50px"
                     android:src="@drawable/linked_5" />
 
                 <TextView
@@ -93,14 +95,15 @@
                     android:layout_marginLeft="6px"
                     android:text="官网地址"
                     android:textColor="@color/color333333"
-                    android:textSize="30px" />
+                    android:textSize="36px" />
 
                 <TextView
+                    android:textStyle="bold"
+                    android:id="@+id/weburl"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8px"
                     android:text="www.zjcyxf.com"
-                    android:autoLink="web"
                     android:textColor="@color/color36519E"
                     android:textSize="24px" />
 
@@ -108,7 +111,7 @@
 
 
             <TextView
-                android:textSize="30px"
+                android:textSize="40px"
                 android:layout_marginTop="40px"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/color333333"
