--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -169,8 +169,7 @@
             android:layout_height="wrap_content" />
     </com.zhy.autolayout.AutoLinearLayout>
         <TextView
-
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="8dp"
             android:layout_gravity="bottom"
             android:id="@+id/banben"
             android:drawablePadding="8px"
@@ -180,6 +179,15 @@
             android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
+        <TextView
+            android:layout_marginBottom="15dp"
+            android:layout_gravity="bottom"
+            android:drawablePadding="8px"
+            android:textColor="#c8c8c8"
+            android:text="联系我们  0571-56260119"
+            android:textSize="12sp"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </com.zhy.autolayout.AutoLinearLayout>
 </layout>
