--- a/app/src/main/res/layout/activity_project_list.xml
+++ b/app/src/main/res/layout/activity_project_list.xml
@@ -14,11 +14,12 @@
     android:layout_marginLeft="30px"
     android:queryHint="查询项目单位"
     android:id="@+id/searchview"
-    android:textSize="28px"
+
+    android:textSize="14sp"
     android:background="@drawable/searchview_line"
     android:iconifiedByDefault="false"
     android:layout_width="match_parent"
-    android:layout_height="90px"></SearchView>
+    android:layout_height="75px"></SearchView>
 
         <android.support.v7.widget.RecyclerView
             android:layout_marginTop="20px"
