--- a/app/src/main/res/layout/fragemnt_warning.xml
+++ b/app/src/main/res/layout/fragemnt_warning.xml
@@ -64,16 +64,34 @@
                 android:background="@color/colorAccent"/>
         </com.zhy.autolayout.AutoLinearLayout>
     </com.zhy.autolayout.AutoLinearLayout>
-        <android.support.design.widget.TabLayout
+        <!--<android.support.design.widget.TabLayout-->
+            <!--android:id="@+id/tab_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="90px"-->
+            <!--android:background="#ffffff"-->
+            <!--app:tabIndicatorColor="@color/colorDefault"-->
+            <!--app:tabMode="scrollable"-->
+            <!--app:tabSelectedTextColor="@color/colorDefault"-->
+            <!--app:tabTextAppearance="@style/TabLayoutTextStyle"-->
+            <!--app:tabTextColor="#4A4A4A"/>-->
+
+        <com.androidkun.xtablayout.XTabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="90px"
-            android:background="#ffffff"
-            app:tabIndicatorColor="@color/colorDefault"
-          app:tabMode="scrollable"
-            app:tabSelectedTextColor="@color/colorDefault"
-            app:tabTextAppearance="@style/TabLayoutTextStyle"
-            app:tabTextColor="#4A4A4A"/>
+            android:layout_height="80px"
+            app:xTabMode="scrollable"
+            app:xTabIndicatorColor="@color/colorDefault"
+            app:xTabIndicatorHeight="5dp"
+            app:xTabSelectedTextColor="@color/colorDefault"
+            app:xTabTextColor="#666"
+            app:xTabTextSize="15sp"
+            app:xTabBackgroundColor="#fff"
+            app:xTabSelectedBackgroundColor="#fff"
+            app:xTabDividerWidthWidthText="true"
+
+            app:xTabTextSelectedBold="true"
+            app:xTabTextBold="false"
+            app:xTabSelectedTextSize="22sp"/>
 
         <!-- 内容区域 -->
         <android.support.v4.view.ViewPager
