--- a/app/src/main/res/layout/fragment_dcl.xml
+++ b/app/src/main/res/layout/fragment_dcl.xml
@@ -7,6 +7,7 @@
         android:orientation="vertical">
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            android:layout_marginTop="15px"
             android:id="@+id/srl_body"
             android:layout_width="match_parent"
             android:layout_height="0dp"
