--- a/app/src/main/res/layout/fragment_tbc.xml
+++ b/app/src/main/res/layout/fragment_tbc.xml
@@ -8,6 +8,8 @@
         android:orientation="vertical">
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            android:layout_marginTop="15px"
+
             android:id="@+id/srl_body"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -16,7 +18,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rc_body"
-                android:background="@color/colorf6f6f6"
+                android:background="#F2F4F8"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
