--- a/app/src/main/res/layout/view_alertdialog.xml
+++ b/app/src/main/res/layout/view_alertdialog.xml
@@ -47,7 +47,7 @@
             android:layout_weight="1"
             android:background="@drawable/alertdialog_left_selector"
             android:gravity="center"
-            android:textColor="@color/actionsheet_blue"
+            android:textColor="@color/alertdialog_line"
             android:textSize="16sp" />
 
         <ImageView
