--- a/lib_common/src/main/res/layout/empty_hint_layout.xml
+++ b/lib_common/src/main/res/layout/empty_hint_layout.xml
@@ -6,7 +6,9 @@
     android:orientation="vertical">
 
     <TextView
+        android:drawablePadding="40px"
         android:id="@id/tv_hint"
+        android:drawableTop="@drawable/no_data_icon2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
