--- a/app/src/main/res/layout/activity_smart_patrol_record.xml
+++ b/app/src/main/res/layout/activity_smart_patrol_record.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
@@ -7,7 +8,7 @@
         android:background="@color/colorBackground"
         android:orientation="vertical">
 
-        <SearchView
+        <android.support.v7.widget.SearchView
             android:id="@+id/searchview"
             android:layout_width="match_parent"
             android:layout_height="75px"
@@ -18,8 +19,9 @@
             android:background="@color/colorWhite"
             android:gravity="clip_vertical"
             android:iconifiedByDefault="false"
-            android:queryHint="巡查点/地址查询"
-            android:textSize="14dp"></SearchView>
+
+            app:queryHint="巡查点/地址查"
+            android:textSize="14dp"></android.support.v7.widget.SearchView>
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/srl_body"
