--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -74,4 +74,5 @@
     <color name="color_ff6666">#ff6666</color>
     <color name="color_999999">#999999</color>
     <color name="color_38539f">#38539f</color>
+    <color name="color424242">#424242</color>
 </resources>
