--- a/app/src/main/res/layout/activity_smartpatrol.xml
+++ b/app/src/main/res/layout/activity_smartpatrol.xml
@@ -5,6 +5,8 @@
         android:id="@+id/lly_body"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:background="@color/colorBackground"
         android:orientation="vertical">
 
