--- a/app/src/main/res/layout/item_smart_patrol_map_layout.xml
+++ b/app/src/main/res/layout/item_smart_patrol_map_layout.xml
@@ -5,12 +5,12 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:paddingLeft="20dp"
+
+        android:paddingLeft="35dp"
+        android:background="@color/colorWhite"
         android:paddingTop="12dp"
         android:layout_marginBottom="8dp"
-        android:paddingRight="20dp"
+        android:paddingRight="35dp"
         android:paddingBottom="12dp">
 
 
