--- a/app/src/main/res/layout/item_smart_patrol_record.xml
+++ b/app/src/main/res/layout/item_smart_patrol_record.xml
@@ -19,12 +19,20 @@
             android:text="名字"
             android:textColor="@color/color333333"
             android:textSize="28px" />
+        <View
+android:layout_marginTop="10px"
+            android:id="@+id/line"
+            android:layout_below="@+id/tv_name"
+            android:layerType="software"
+            android:background="@drawable/shape_white5"
+            android:layout_width="match_parent"
+            android:layout_height="2dp" />
 
         <TextView
             android:id="@+id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_name"
+            android:layout_below="@+id/line"
             android:layout_alignParentLeft="true"
             android:layout_marginTop="16px"
             android:text="小区大门口"
