--- a/app/src/main/res/layout/item_smart_patrol_map_layout.xml
+++ b/app/src/main/res/layout/item_smart_patrol_map_layout.xml
@@ -119,27 +119,31 @@
             app:layout_constraintLeft_toLeftOf="@+id/tv_name"
             app:layout_constraintLeft_toRightOf="@+id/tv_hint5" />
 
-        <TextView
-            android:id="@+id/tv_hint6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="图片"
-            android:textColor="@color/color333333"
-            android:textSize="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_demo" />
 
 
         <com.zhy.autolayout.AutoLinearLayout
+            android:layout_marginTop="8dp"
             android:id="@+id/lly_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_hint6"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_name"
-            app:layout_constraintLeft_toRightOf="@+id/tv_hint6">
-
-
+            app:layout_constraintTop_toBottomOf="@+id/tv_demo"
+           >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:text="图片"
+                android:textColor="@color/color333333"
+                android:textSize="28px" />
+            <GridView
+                android:layout_marginLeft="160px"
+                android:id="@+id/gv_body"
+                android:layout_width="0dp"
+                android:numColumns="5"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+            </GridView>
         </com.zhy.autolayout.AutoLinearLayout>
 
         <TextView
@@ -150,7 +154,7 @@
             android:text="完成巡查时间"
             android:textColor="@color/color333333"
             android:textSize="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_hint6" />
+            app:layout_constraintTop_toBottomOf="@+id/lly_img" />
 
         <TextView
             android:id="@+id/tv_over_time"
