修改地图页面   图片大小和圆角

--- a/app/src/main/res/layout/item_smart_patrol_map_layout.xml
+++ b/app/src/main/res/layout/item_smart_patrol_map_layout.xml
@@ -135,7 +135,7 @@
                 android:background="@color/colorWhite"
                 android:text="图片"
                 android:textColor="@color/color333333"
-                android:textSize="28px" />
+                android:textSize="14dp" />
             <GridView
                 android:layout_marginLeft="160px"
                 android:id="@+id/gv_body"
