修改搜索框   修改图片  优化地图

--- a/app/src/main/res/layout/activity_smart_patrol_map.xml
+++ b/app/src/main/res/layout/activity_smart_patrol_map.xml
@@ -11,6 +11,7 @@
         <com.amap.api.maps.MapView
             android:id="@+id/map"
             android:layout_width="match_parent"
+            android:layout_marginBottom="182dp"
             android:layout_height="match_parent" />
 
         <ImageView
