--- a/app/src/main/res/layout/activity_smartlector_monitoring_detail.xml
+++ b/app/src/main/res/layout/activity_smartlector_monitoring_detail.xml
@@ -88,7 +88,7 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:textStyle="bold"
-                android:text="报警阀值"
+                android:text="报警阈值"
                 android:textSize="28px"
                 android:textColor="#424242"
                 android:id="@+id/tv_03"
