--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
-        android:background="@mipmap/start_logo">
+        android:background="@color/white">
 <ImageView
     android:background="@mipmap/start_logo1"
     android:layout_width="wrap_content"
