--- a/app/src/main/res/layout/fragment_tbc.xml
+++ b/app/src/main/res/layout/fragment_tbc.xml
@@ -18,7 +18,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rc_body"
-                android:background="#F2F4F8"
+                android:background="@color/colorBackground"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
