--- a/app/src/main/res/layout/fragment_ycl.xml
+++ b/app/src/main/res/layout/fragment_ycl.xml
@@ -11,10 +11,11 @@
             android:id="@+id/srl_body"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/colorf6f6f6"
+            android:background="@color/colorBackground"
             android:layout_weight="1">
 
             <android.support.v7.widget.RecyclerView
+                android:background="@color/colorBackground"
                 android:id="@+id/rc_body"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
