--- a/lib_common/src/main/res/layout/empty_hint_layout.xml
+++ b/lib_common/src/main/res/layout/empty_hint_layout.xml
@@ -2,10 +2,11 @@
 <com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorbackground"
+   android:background="#F2F4F8"
     android:orientation="vertical">
 
     <TextView
+        android:background="@android:color/transparent"
         android:drawablePadding="40px"
         android:id="@id/tv_hint"
         android:drawableTop="@drawable/no_data_icon2"
