--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colord9d9d9">#d9d9d9</color>
     <color name="colord2b2b2b">#2b2b2b</color>
     <color name="color3e3e3e">#3e3e3e</color>
+    <color name="color3B3B3B">#3B3B3B</color>
     <color name="color2D3D6D">#2D3D6D</color>
     <color name="color333333">#333333</color>
     <color name="color888888">#888888</color>
